--- a/public/game.html
+++ b/public/game.html
@@ -374,10 +374,6 @@
                     rgba(190, 35, 35, 0.98) 50%,
                     rgba(210, 50, 50, 0.95) 75%,
                     rgba(230, 65, 65, 0.9) 100%);
-            animation:
-                timer-countdown-ltr 60s linear forwards,
-                blood-flow 3s ease-in-out infinite,
-                blood-pulse 2s ease-in-out infinite;
             z-index: 3;
             border-radius: 14px;
             box-shadow:
@@ -388,8 +384,8 @@
             transform-origin: right center;
         }
 
-        /* Blood surface with subtle waves */
-        .timer-fill::before {
+        /* Blood surface with subtle waves - only when countdown active */
+        .timer-fill.countdown::before {
             content: '';
             position: absolute;
             top: 0;
@@ -406,8 +402,8 @@
             border-radius: 14px 14px 0 0;
         }
 
-        /* Bubble system inside blood */
-        .timer-fill::after {
+        /* Bubble system inside blood - only when countdown active */
+        .timer-fill.countdown::after {
             content: '';
             position: absolute;
             top: 0;
@@ -421,6 +417,13 @@
                 radial-gradient(circle 1px at 45% 60%, rgba(255, 255, 255, 0.4) 0%, transparent 50%),
                 radial-gradient(circle 2px at 15% 45%, rgba(255, 255, 255, 0.3) 0%, transparent 50%);
             animation: bubbles-float 3.5s ease-in-out infinite;
+        }
+
+        .timer-fill.countdown {
+            animation:
+                timer-countdown-ltr 60s linear forwards,
+                blood-flow 3s ease-in-out infinite,
+                blood-pulse 2s ease-in-out infinite;
         }
 
         @keyframes blood-flow {
@@ -518,13 +521,6 @@
 
         .timer-fill.reset {
             animation: timer-reset 0.3s ease-out forwards;
-        }
-
-        .timer-fill.countdown {
-            animation:
-                timer-countdown-ltr 60s linear forwards,
-                blood-flow 3s ease-in-out infinite,
-                blood-pulse 2s ease-in-out infinite;
         }
 
         /* Compact timer display */
