Auth fix: priority to saved tokens

--- a/public/index.html
+++ b/public/index.html
@@ -902,7 +902,12 @@
 
             // Инициализируем приложение
             if (typeof initApp === 'function') {
-                initApp();
+                initApp().catch(error => {
+                    console.error('Ошибка инициализации приложения:', error);
+                    // Показываем контент даже в случае ошибки
+                    document.querySelector('.loading-container').style.display = 'none';
+                    document.querySelector('.app-container').style.display = 'flex';
+                });
             }
         });
     </script>
