--- a/public/profile.html
+++ b/public/profile.html
@@ -177,7 +177,7 @@
         }
 
         .header-title {
-            font-family: 'Butcherman', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 1.4rem;
             font-weight: 700;
             letter-spacing: 2px;
@@ -263,7 +263,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Special Elite', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 10px;
             font-weight: bold;
             color: var(--crimson);
@@ -287,16 +287,17 @@
         .rank-badge {
             background: var(--blood-gradient);
             color: var(--bone);
-            padding: 6px 16px;
-            border-radius: 20px;
-            font-size: 0.9rem;
+            padding: 8px 20px;
+            border-radius: 25px;
+            font-size: 1rem;
             font-weight: 700;
             display: inline-block;
-            margin-bottom: 16px;
+            margin-bottom: 20px;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 2px;
             box-shadow: var(--shadow-glow);
             animation: rankGlow 3s ease-in-out infinite;
+            font-family: 'JetBrains Mono', monospace;
         }
 
         @keyframes rankGlow {
@@ -315,7 +316,7 @@
             position: relative;
             width: 120px;
             height: 120px;
-            margin: 0 auto 16px;
+            margin: 0 auto 20px;
         }
 
         .avatar {
@@ -333,6 +334,22 @@
             overflow: hidden;
         }
 
+        /* Исправленная аватарка */
+        .avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 50%;
+        }
+
+        .avatar #avatar-placeholder {
+            font-family: 'JetBrains Mono', monospace;
+            font-weight: 700;
+            font-size: 3rem;
+            color: var(--bone);
+        }
+
         .avatar::before {
             content: '';
             position: absolute;
@@ -342,6 +359,8 @@
             height: 200%;
             background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
             animation: avatarShine 4s linear infinite;
+            z-index: 1;
+            pointer-events: none;
         }
 
         @keyframes avatarShine {
@@ -354,19 +373,25 @@
             }
         }
 
+        /* Исправленная LVL плашка */
         .level-badge {
             position: absolute;
-            bottom: -8px;
-            right: -8px;
+            bottom: -5px;
+            right: -5px;
             background: var(--neon-red);
             color: var(--midnight);
-            padding: 4px 12px;
+            padding: 6px 12px;
             border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 700;
+            font-size: 0.9rem;
+            font-weight: 900;
             border: 3px solid var(--charcoal);
             box-shadow: var(--shadow-deep);
             animation: levelPulse 2s ease-in-out infinite;
+            font-family: 'JetBrains Mono', monospace;
+            z-index: 10;
+            min-width: 45px;
+            text-align: center;
+            line-height: 1;
         }
 
         @keyframes levelPulse {
@@ -383,7 +408,7 @@
         }
 
         .profile-name {
-            font-family: 'Butcherman', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 1.8rem;
             font-weight: 800;
             margin-bottom: 8px;
@@ -554,7 +579,7 @@
         }
 
         .stat-value {
-            font-family: 'Butcherman', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 2.2rem;
             font-weight: 900;
             color: var(--crimson);
@@ -599,7 +624,7 @@
         }
 
         .section-title {
-            font-family: 'Special Elite', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 1.2rem;
             font-weight: 700;
             display: flex;
@@ -785,7 +810,7 @@
         }
 
         .position-rank {
-            font-family: 'Nosifer', cursive;
+            font-family: 'JetBrains Mono', monospace;
             font-size: 3.5rem;
             font-weight: 900;
             background: var(--blood-gradient);
@@ -1017,6 +1042,130 @@
         .stat-card:nth-child(4) {
             animation-delay: 0.4s;
         }
+
+        /* Модальное окно для достижений */
+        .achievement-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            backdrop-filter: blur(10px);
+        }
+
+        .achievement-modal.show {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: modalFadeIn 0.3s ease-out;
+        }
+
+        @keyframes modalFadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        .achievement-modal-content {
+            background: rgba(26, 26, 26, 0.95);
+            border: 2px solid var(--blood-red);
+            border-radius: 20px;
+            padding: 32px;
+            max-width: 400px;
+            width: 90%;
+            text-align: center;
+            position: relative;
+            animation: modalSlideIn 0.3s ease-out;
+            box-shadow: var(--shadow-deep);
+        }
+
+        @keyframes modalSlideIn {
+            0% {
+                transform: translateY(-50px) scale(0.9);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateY(0) scale(1);
+                opacity: 1;
+            }
+        }
+
+        .achievement-modal-close {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            background: none;
+            border: none;
+            color: var(--crimson);
+            font-size: 1.5rem;
+            cursor: pointer;
+            padding: 4px;
+            line-height: 1;
+        }
+
+        .achievement-modal-close:hover {
+            color: var(--neon-red);
+        }
+
+        .achievement-modal-icon {
+            font-size: 4rem;
+            margin-bottom: 16px;
+            display: block;
+            animation: iconBounce 2s ease-in-out infinite;
+        }
+
+        @keyframes iconBounce {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        .achievement-modal-title {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: var(--crimson);
+            margin-bottom: 12px;
+        }
+
+        .achievement-modal-description {
+            color: var(--silver);
+            line-height: 1.5;
+            margin-bottom: 20px;
+        }
+
+        .achievement-modal-status {
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.9rem;
+        }
+
+        .achievement-modal-status.unlocked {
+            background: var(--blood-gradient);
+            color: var(--bone);
+        }
+
+        .achievement-modal-status.locked {
+            background: var(--ash);
+            color: var(--fog);
+        }
     </style>
 </head>
 
@@ -1145,6 +1294,17 @@
                     <!-- Динамическое содержимое -->
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Модальное окно для достижений -->
+    <div class="achievement-modal" id="achievement-modal">
+        <div class="achievement-modal-content">
+            <button class="achievement-modal-close" id="modal-close">&times;</button>
+            <div class="achievement-modal-icon" id="modal-icon">🏆</div>
+            <div class="achievement-modal-title" id="modal-title">Название достижения</div>
+            <div class="achievement-modal-description" id="modal-description">Описание достижения</div>
+            <div class="achievement-modal-status unlocked" id="modal-status">Получено</div>
         </div>
     </div>
 
