--- a/public/profile.html
+++ b/public/profile.html
@@ -334,13 +334,17 @@
             overflow: hidden;
         }
 
-        /* Исправленная аватарка */
+        /* ИСПРАВЛЕННАЯ аватарка - идеально круглая */
         .avatar img {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
             object-position: center;
             border-radius: 50%;
+            z-index: 2;
         }
 
         .avatar #avatar-placeholder {
@@ -348,6 +352,7 @@
             font-weight: 700;
             font-size: 3rem;
             color: var(--bone);
+            z-index: 1;
         }
 
         .avatar::before {
@@ -359,7 +364,7 @@
             height: 200%;
             background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
             animation: avatarShine 4s linear infinite;
-            z-index: 1;
+            z-index: 3;
             pointer-events: none;
         }
 
@@ -373,37 +378,64 @@
             }
         }
 
-        /* Исправленная LVL плашка */
+        /* ПРОФЕССИОНАЛЬНАЯ LVL плашка */
         .level-badge {
             position: absolute;
-            bottom: -5px;
-            right: -5px;
-            background: var(--neon-red);
-            color: var(--midnight);
-            padding: 6px 12px;
-            border-radius: 20px;
-            font-size: 0.9rem;
+            bottom: 8px;
+            right: 8px;
+            background: linear-gradient(135deg, var(--neon-red), #FF1744);
+            color: #FFFFFF;
+            padding: 4px 8px;
+            border-radius: 12px;
+            font-size: 0.75rem;
             font-weight: 900;
-            border: 3px solid var(--charcoal);
-            box-shadow: var(--shadow-deep);
+            border: 2px solid #FFFFFF;
+            box-shadow:
+                0 2px 8px rgba(255, 0, 64, 0.4),
+                0 0 0 1px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
             animation: levelPulse 2s ease-in-out infinite;
             font-family: 'JetBrains Mono', monospace;
             z-index: 10;
-            min-width: 45px;
+            min-width: 36px;
             text-align: center;
-            line-height: 1;
+            line-height: 1.2;
+            letter-spacing: 0.5px;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+            transform: translateZ(0);
+            backface-visibility: hidden;
+        }
+
+        .level-badge::before {
+            content: '';
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            right: -1px;
+            bottom: -1px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent);
+            border-radius: 12px;
+            z-index: -1;
         }
 
         @keyframes levelPulse {
 
             0%,
             100% {
-                transform: scale(1);
+                transform: scale(1) translateZ(0);
+                box-shadow:
+                    0 2px 8px rgba(255, 0, 64, 0.4),
+                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.2);
             }
 
             50% {
-                transform: scale(1.1);
-                box-shadow: 0 0 20px var(--neon-red);
+                transform: scale(1.05) translateZ(0);
+                box-shadow:
+                    0 4px 12px rgba(255, 0, 64, 0.6),
+                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.3),
+                    0 0 20px rgba(255, 0, 64, 0.3);
             }
         }
 
@@ -1196,7 +1228,7 @@
 
                 <div class="avatar-container">
                     <div class="avatar" id="user-avatar">
-                        <div id="avatar-placeholder">Л</div>
+                        <div id="avatar-placeholder" style="transition: opacity 0.5s ease;">Л</div>
                         <div class="level-badge">LVL <span id="user-level">15</span></div>
                     </div>
                 </div>
