--- a/public/profile.html
+++ b/public/profile.html
@@ -284,6 +284,15 @@
             }
         }
 
+        .rank-badges-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
         .rank-badge {
             background: var(--blood-gradient);
             color: var(--bone);
@@ -291,8 +300,6 @@
             border-radius: 25px;
             font-size: 1rem;
             font-weight: 700;
-            display: inline-block;
-            margin-bottom: 20px;
             text-transform: uppercase;
             letter-spacing: 2px;
             box-shadow: var(--shadow-glow);
@@ -309,6 +316,63 @@
 
             50% {
                 box-shadow: 0 0 30px rgba(220, 20, 60, 0.6);
+            }
+        }
+
+        .level-badge-top {
+            background: linear-gradient(135deg, var(--neon-red), #FF1744);
+            color: #FFFFFF;
+            padding: 8px 12px;
+            border-radius: 20px;
+            font-size: 0.9rem;
+            font-weight: 900;
+            border: 2px solid #FFFFFF;
+            box-shadow:
+                0 2px 8px rgba(255, 0, 64, 0.4),
+                0 0 0 1px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
+            animation: levelPulse 2s ease-in-out infinite;
+            font-family: 'JetBrains Mono', monospace;
+            min-width: 48px;
+            text-align: center;
+            line-height: 1.2;
+            letter-spacing: 0.5px;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+            transform: translateZ(0);
+            backface-visibility: hidden;
+            position: relative;
+        }
+
+        .level-badge-top::before {
+            content: '';
+            position: absolute;
+            top: -1px;
+            left: -1px;
+            right: -1px;
+            bottom: -1px;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent);
+            border-radius: 20px;
+            z-index: -1;
+        }
+
+        @keyframes levelPulse {
+
+            0%,
+            100% {
+                transform: scale(1) translateZ(0);
+                box-shadow:
+                    0 2px 8px rgba(255, 0, 64, 0.4),
+                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.2);
+            }
+
+            50% {
+                transform: scale(1.05) translateZ(0);
+                box-shadow:
+                    0 4px 12px rgba(255, 0, 64, 0.6),
+                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.3),
+                    0 0 20px rgba(255, 0, 64, 0.3);
             }
         }
 
@@ -375,67 +439,6 @@
 
             100% {
                 transform: translateX(100%) translateY(100%) rotate(45deg);
-            }
-        }
-
-        /* ПРОФЕССИОНАЛЬНАЯ LVL плашка */
-        .level-badge {
-            position: absolute;
-            bottom: 8px;
-            right: 8px;
-            background: linear-gradient(135deg, var(--neon-red), #FF1744);
-            color: #FFFFFF;
-            padding: 4px 8px;
-            border-radius: 12px;
-            font-size: 0.75rem;
-            font-weight: 900;
-            border: 2px solid #FFFFFF;
-            box-shadow:
-                0 2px 8px rgba(255, 0, 64, 0.4),
-                0 0 0 1px rgba(0, 0, 0, 0.1),
-                inset 0 1px 0 rgba(255, 255, 255, 0.2);
-            animation: levelPulse 2s ease-in-out infinite;
-            font-family: 'JetBrains Mono', monospace;
-            z-index: 10;
-            min-width: 36px;
-            text-align: center;
-            line-height: 1.2;
-            letter-spacing: 0.5px;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-            transform: translateZ(0);
-            backface-visibility: hidden;
-        }
-
-        .level-badge::before {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent);
-            border-radius: 12px;
-            z-index: -1;
-        }
-
-        @keyframes levelPulse {
-
-            0%,
-            100% {
-                transform: scale(1) translateZ(0);
-                box-shadow:
-                    0 2px 8px rgba(255, 0, 64, 0.4),
-                    0 0 0 1px rgba(0, 0, 0, 0.1),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.2);
-            }
-
-            50% {
-                transform: scale(1.05) translateZ(0);
-                box-shadow:
-                    0 4px 12px rgba(255, 0, 64, 0.6),
-                    0 0 0 1px rgba(0, 0, 0, 0.1),
-                    inset 0 1px 0 rgba(255, 255, 255, 0.3),
-                    0 0 20px rgba(255, 0, 64, 0.3);
             }
         }
 
@@ -1224,12 +1227,14 @@
                     CLASSIFIED
                 </div>
 
-                <div class="rank-badge" id="detective-rank">ЭКСПЕРТ</div>
+                <div class="rank-badges-container">
+                    <div class="rank-badge" id="detective-rank">ЭКСПЕРТ</div>
+                    <div class="level-badge-top">LVL <span id="user-level">15</span></div>
+                </div>
 
                 <div class="avatar-container">
                     <div class="avatar" id="user-avatar">
                         <div id="avatar-placeholder" style="transition: opacity 0.5s ease;">Л</div>
-                        <div class="level-badge">LVL <span id="user-level">15</span></div>
                     </div>
                 </div>
 
