--- a/public/profile.html
+++ b/public/profile.html
@@ -284,95 +284,42 @@
             }
         }
 
-        .rank-badges-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 12px;
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-        }
-
-        .rank-badge {
-            background: var(--blood-gradient);
-            color: var(--bone);
-            padding: 8px 20px;
-            border-radius: 25px;
-            font-size: 1rem;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            box-shadow: var(--shadow-glow);
-            animation: rankGlow 3s ease-in-out infinite;
-            font-family: 'JetBrains Mono', monospace;
-        }
-
-        @keyframes rankGlow {
-
-            0%,
-            100% {
-                box-shadow: var(--shadow-glow);
-            }
-
-            50% {
-                box-shadow: 0 0 30px rgba(220, 20, 60, 0.6);
-            }
-        }
-
-        .level-badge-top {
+        .level-badge-center {
             background: linear-gradient(135deg, var(--neon-red), #FF1744);
             color: #FFFFFF;
-            padding: 8px 12px;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            font-weight: 900;
-            border: 2px solid #FFFFFF;
+            padding: 4px 10px;
+            border-radius: 15px;
+            font-size: 0.7rem;
+            font-weight: 800;
+            border: 1px solid rgba(255, 255, 255, 0.6);
             box-shadow:
-                0 2px 8px rgba(255, 0, 64, 0.4),
-                0 0 0 1px rgba(0, 0, 0, 0.1),
+                0 2px 6px rgba(255, 0, 64, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.2);
-            animation: levelPulse 2s ease-in-out infinite;
+            animation: levelPulseSmall 2s ease-in-out infinite;
             font-family: 'JetBrains Mono', monospace;
-            min-width: 48px;
             text-align: center;
-            line-height: 1.2;
             letter-spacing: 0.5px;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-            transform: translateZ(0);
-            backface-visibility: hidden;
-            position: relative;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+            display: inline-block;
+            margin: 8px 0 16px 0;
         }
 
-        .level-badge-top::before {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent);
-            border-radius: 20px;
-            z-index: -1;
-        }
-
-        @keyframes levelPulse {
+        @keyframes levelPulseSmall {
 
             0%,
             100% {
-                transform: scale(1) translateZ(0);
+                transform: scale(1);
                 box-shadow:
-                    0 2px 8px rgba(255, 0, 64, 0.4),
-                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    0 2px 6px rgba(255, 0, 64, 0.3),
                     inset 0 1px 0 rgba(255, 255, 255, 0.2);
             }
 
             50% {
-                transform: scale(1.05) translateZ(0);
+                transform: scale(1.03);
                 box-shadow:
-                    0 4px 12px rgba(255, 0, 64, 0.6),
-                    0 0 0 1px rgba(0, 0, 0, 0.1),
+                    0 3px 8px rgba(255, 0, 64, 0.5),
                     inset 0 1px 0 rgba(255, 255, 255, 0.3),
-                    0 0 20px rgba(255, 0, 64, 0.3);
+                    0 0 12px rgba(255, 0, 64, 0.2);
             }
         }
 
@@ -1201,6 +1148,34 @@
             background: var(--ash);
             color: var(--fog);
         }
+
+        .rank-badge {
+            background: var(--blood-gradient);
+            color: var(--bone);
+            padding: 8px 20px;
+            border-radius: 25px;
+            font-size: 1rem;
+            font-weight: 700;
+            display: inline-block;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            box-shadow: var(--shadow-glow);
+            animation: rankGlow 3s ease-in-out infinite;
+            font-family: 'JetBrains Mono', monospace;
+        }
+
+        @keyframes rankGlow {
+
+            0%,
+            100% {
+                box-shadow: var(--shadow-glow);
+            }
+
+            50% {
+                box-shadow: 0 0 30px rgba(220, 20, 60, 0.6);
+            }
+        }
     </style>
 </head>
 
@@ -1227,10 +1202,7 @@
                     CLASSIFIED
                 </div>
 
-                <div class="rank-badges-container">
-                    <div class="rank-badge" id="detective-rank">ЭКСПЕРТ</div>
-                    <div class="level-badge-top">LVL <span id="user-level">15</span></div>
-                </div>
+                <div class="rank-badge" id="detective-rank">ЭКСПЕРТ</div>
 
                 <div class="avatar-container">
                     <div class="avatar" id="user-avatar">
@@ -1239,6 +1211,7 @@
                 </div>
 
                 <div class="profile-name" id="detective-name">ЛАТА</div>
+                <div class="level-badge-center">LVL <span id="user-level">15</span></div>
                 <div class="profile-id">ДОСЬЕ: <span id="user-id">573113459</span></div>
 
                 <!-- Ультра-современная шкала опыта -->
