🎯 Обновление брендинга - CRIMINAL TRUST → КРИМИНАЛЬНЫЙ БЛЕФ - КРИМИНАЛЬНЫЕ ДОСТИЖЕНИЯ → ЗАСЛУГИ - Локализация интерфейса на русский язык

--- a/public/profile.html
+++ b/public/profile.html
@@ -1190,7 +1190,7 @@
                 <button class="back-button" onclick="window.history.back()">
                     <i data-lucide="arrow-left" style="width: 20px; height: 20px;"></i>
                 </button>
-                <div class="header-title">CRIMINAL TRUST</div>
+                <div class="header-title">КРИМИНАЛЬНЫЙ БЛЕФ</div>
             </div>
         </div>
 
@@ -1251,7 +1251,7 @@
             <div class="section">
                 <div class="section-header">
                     <div class="section-title">
-                        🏆 КРИМИНАЛЬНЫЕ ДОСТИЖЕНИЯ
+                        🏆 ЗАСЛУГИ
                         <div class="section-count"><span id="achievements-count">4</span>/12</div>
                     </div>
                 </div>
